# napi

./: .gitignore  AGENTS.md  Cargo.toml  dev.sh  dist.napi.sh  new.napi.sh  new.rs.sh  package.json  replace.js
.agents/skills/js_review/: SKILL.md
.agents/skills/rust_review/: SKILL.md
.github/workflows/: captcha-publish.yml  napi-publish-template.yml
_tmpl/napi/: Cargo.toml  index.js  index.test.js  package.json  test.sh
_tmpl/napi/src/: lib.rs
_tmpl/rs/: Cargo.toml
captcha/: Cargo.toml  build.rs  index.d.ts  index.js  index.test.js  package.json  test.sh  verify.d.ts  verify.js
captcha/npm/darwin-arm64/: package.json
captcha/npm/darwin-x64/: package.json
captcha/npm/linux-arm64-gnu/: package.json
captcha/npm/linux-arm64-musl/: package.json
captcha/npm/linux-x64-gnu/: package.json
captcha/npm/linux-x64-musl/: package.json
captcha/npm/win32-arm64-msvc/: package.json
captcha/npm/win32-x64-msvc/: package.json
captcha/src/: error.rs  lib.rs
captcha/tests/: package.json  test.js
doc/: npm_publish.md
sh/: cargo_install.sh  dev.sh  dist.napi.js  dist.napi.sh  dist.sh  jsr.sh  new.napi.js  new.napi.sh  npm.init.js  open_npm_settings.sh  upgrade.sh
svg_captcha/: Cargo.toml  README.md  README.mdt  run.gen.sh  run.srv.sh  run_test.rs  svgCompress.js  test_waves.html
svg_captcha/benches/: bench.rs
svg_captcha/examples/: main.rs  server.rs  test_svg.rs
svg_captcha/examples/public/: captcha.css  captcha.js  index.html
svg_captcha/js/: resize.js
svg_captcha/readme/: en.md  zh.md
svg_captcha/src/: error.rs  lib.rs  render.rs  verify.rs
svg_captcha/src/consts/: mod.rs  pattern.rs  svg.rs  tmpl.rs
svg_captcha/src/img/: effect.rs  mod.rs  pixmap.rs  webp.rs
svg_captcha/src/img/filter/: cinematic.rs  grain.rs  metaballs.rs  mod.rs  oil_painting.rs  ribbon.rs  warp.rs  watercolor.rs
svg_captcha/src/svg/: art.rs  color.rs  ctx.rs  mod.rs  noise.rs  path.rs
svg_captcha/tests/: main.rs
