[workspace]
resolver = "2"
members = ["svg_captcha"]
exclude = [ "_tmpl" ]

[workspace.dependencies]
[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
debug-assertions = false

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
opt-level = 3
