[workspace]
resolver = "2"
members = [ "captcha", "svg_captcha" ]
exclude = [ "_tmpl" ]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
opt-level = 3
