[package]
edition = "2024"
name = "captcha"
version = "0.1.28"
description = "NAPI-RS project template"
repository = "https://github.com/talkto-me-dev/napi"
homepage = "https://github.com/talkto-me-dev/napi#readme"
license = "MulanPSL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
svg_captcha = { version = "0.1.5", path = "../svg_captcha" }
thiserror = "2.0.18"
napi = { version = "3", features = ["napi10", "tokio_rt"], default-features = false }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
