[package]
edition = "2024"
name = "_tmpl"
version = "0.1.0"
description = "NAPI-RS project template"
repository = "https://github.com/talkto-me-dev/napi"
homepage = "https://github.com/talkto-me-dev/napi#readme"
license = "MulanPSL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.13", features = ["async"] }
napi-derive = "2.16.13"

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
